         rzx.c,settings.pl,snapshot.c,sound.c,tape.c,ui.c,utils.c:
         switch to using libspectrum_free over free to match our allocations
         (Fred).
20120612 ui/gtk/gtkui.c: replace deprecated gtk_radio_button_group() with
         gtk_radio_button_get_group() (patch #3534178) (Sergio).
20120612 ui/gtk/{debugger.c,gtkui.c,memory.c}: replace direct access to struct
         members with accessor functions (patch #3534179) (Sergio).
20120618 ui/gtk/{Makefile.am,gtkcompat.h,options.pl}: replace deprecated
         gtk_combo_box_new_text and gtk_combo_box_append_text symbols with
         gtk_combo_box_text_new and gtk_combo_box_text_append_text respectively
         (patch #3534182) (Sergio).
20120618 ui/gtk/{gtkinternals.h,pixmaps.c,statusbar.c}: replace pixmaps in the
         statusbar with pixbufs for GTK+ 3 compatibility (patch #3535005)
         (Sergio).
20120630 settings.pl: cleanup XML memory only once right before exiting (bug
         #3537598) (Sergio).
20120708 configure.in,keysyms.pl,ui/gtk/{Makefile.am,confirm.c,debugger.c,
         gtkcompat.h,gtkdisplay.c,gtkinternals.h,gtkjoystick.c,gtkkeyboard.c,
         gtkmouse.c,gtkui.c,memory.c,options.pl,picture.c,pokefinder.c,
         pokemem.c,roms.c,statusbar.c,stock.c}: add GTK+ 3 compatibility (patch
         #3534181) (Sergio).
20120708 machines/{spec_se.c,tc2048.c,tc2068.c,ts2068.c},memory.[ch],
         peripherals/{dck.c,scld.[ch]}: restore loading of DCK files, fix issue
         loading DCK files with uninitialised RAM (patch #3525261 rkd77 and
         Fred).
20120709 ui/gtk/gtkcompat.c: missed adding file from patch #3534181 (thanks,
         rkd77) (Fred).
20120709 ui/gtk/gtkcompat.c: removed duplicate text (Sergio).
20120716 ui/gtk/gtkjoystick.c: joystick type should be aligned vertically (bug
         #3543781) (Sergio).
20120716 machine.c,peripherals/if1.c: show microdrive icon in the status bar
         before the first access (patch #3543783) (Sergio).